[gd_scene load_steps=85 format=3 uid="uid://b586c3vkx4kp1"]

[ext_resource type="Script" uid="uid://cd0uvtibc3fes" path="res://codigo/boss_slime.gd" id="1_5tkg7"]
[ext_resource type="Texture2D" uid="uid://cte56ba48imkg" path="res://recursos/Enemigos/boss_Slime/sprite_creado.png" id="1_s226o"]
[ext_resource type="Texture2D" uid="uid://d0afqs5ra7dp2" path="res://recursos/Enemigos/boss_Slime/sprite_creado1.png" id="2_fqlmh"]
[ext_resource type="Texture2D" uid="uid://dnul7wc65voyt" path="res://recursos/Enemigos/boss_Slime/dead/0a198347af5a4088b698bbed4e89240cs18M4r12OmhyiMOA-0.png" id="2_n8mn6"]
[ext_resource type="AudioStream" uid="uid://dthmlpgqo5seu" path="res://recursos/audio/efecto/Muerte/SlimeDeath.ogg" id="2_upjr0"]
[ext_resource type="Texture2D" uid="uid://d24lrgdrkr85c" path="res://recursos/Enemigos/boss_Slime/dead/0a198347af5a4088b698bbed4e89240cs18M4r12OmhyiMOA-1.png" id="3_6y0g8"]
[ext_resource type="Texture2D" uid="uid://cu6kx6bllk21e" path="res://recursos/Enemigos/boss_Slime/sprite_creado0.png" id="3_pupxb"]
[ext_resource type="Texture2D" uid="uid://o60gbkm8oe7w" path="res://recursos/Enemigos/boss_Slime/dead/0a198347af5a4088b698bbed4e89240cs18M4r12OmhyiMOA-2.png" id="4_2qdl5"]
[ext_resource type="Texture2D" uid="uid://dss4ouosoa5o1" path="res://recursos/Enemigos/boss_Slime/dead/0a198347af5a4088b698bbed4e89240cs18M4r12OmhyiMOA-3.png" id="5_p2plf"]
[ext_resource type="Texture2D" uid="uid://245jfvow2xwf" path="res://recursos/Medieval_Castle_Asset_Pack/HUD/bar_background.png" id="5_rebo3"]
[ext_resource type="Texture2D" uid="uid://b448qrgg14a6o" path="res://recursos/Enemigos/boss_Slime/dead/0a198347af5a4088b698bbed4e89240cs18M4r12OmhyiMOA-4.png" id="6_2roui"]
[ext_resource type="Texture2D" uid="uid://pk0mu2ilnrtj" path="res://recursos/Medieval_Castle_Asset_Pack/HUD/health_bar.png" id="6_7k0ea"]
[ext_resource type="Texture2D" uid="uid://bpjfkss1cl33d" path="res://recursos/Medieval_Castle_Asset_Pack/HUD/bar.png" id="7_iy1fy"]
[ext_resource type="Texture2D" uid="uid://nwdry73qr08y" path="res://recursos/Enemigos/boss_Slime/dead/0a198347af5a4088b698bbed4e89240cs18M4r12OmhyiMOA-5.png" id="7_ommt7"]
[ext_resource type="Texture2D" uid="uid://dh4viuoho5jf0" path="res://recursos/Enemigos/boss_Slime/dead/0a198347af5a4088b698bbed4e89240cs18M4r12OmhyiMOA-6.png" id="8_thtka"]
[ext_resource type="Texture2D" uid="uid://cybk5tv1bfsgo" path="res://recursos/Enemigos/boss_Slime/dead/0a198347af5a4088b698bbed4e89240cs18M4r12OmhyiMOA-7.png" id="9_56tbj"]
[ext_resource type="Texture2D" uid="uid://cjktjcgcb6x4" path="res://recursos/Enemigos/boss_Slime/dead/0a198347af5a4088b698bbed4e89240cs18M4r12OmhyiMOA-8.png" id="10_ikwq6"]
[ext_resource type="Texture2D" uid="uid://billi8m065l20" path="res://recursos/Enemigos/boss_Slime/dead/0a198347af5a4088b698bbed4e89240cs18M4r12OmhyiMOA-9.png" id="11_edis6"]
[ext_resource type="Texture2D" uid="uid://d32bso001n6qr" path="res://recursos/Enemigos/boss_Slime/dead/0a198347af5a4088b698bbed4e89240cs18M4r12OmhyiMOA-10.png" id="12_mv5xx"]
[ext_resource type="Texture2D" uid="uid://ekkr0w28aonc" path="res://recursos/Enemigos/boss_Slime/dead/0a198347af5a4088b698bbed4e89240cs18M4r12OmhyiMOA-11.png" id="13_mrf0y"]
[ext_resource type="Texture2D" uid="uid://bgop88cl6tphy" path="res://recursos/Enemigos/boss_Slime/dead/0a198347af5a4088b698bbed4e89240cs18M4r12OmhyiMOA-12.png" id="14_ownrv"]
[ext_resource type="Texture2D" uid="uid://7gvc13vn3q52" path="res://recursos/Enemigos/boss_Slime/dead/0a198347af5a4088b698bbed4e89240cs18M4r12OmhyiMOA-13.png" id="15_jr0rh"]
[ext_resource type="Texture2D" uid="uid://cd5eylp6gmakj" path="res://recursos/Enemigos/boss_Slime/dead/0a198347af5a4088b698bbed4e89240cs18M4r12OmhyiMOA-14.png" id="16_imipm"]
[ext_resource type="Texture2D" uid="uid://lpq1v5vfsql8" path="res://recursos/Enemigos/boss_Slime/dead/0a198347af5a4088b698bbed4e89240cs18M4r12OmhyiMOA-15.png" id="17_bc784"]
[ext_resource type="AudioStream" uid="uid://bkc7xjbmeuifc" path="res://recursos/audio/efecto/ataque/mSlimeAggroA.ogg" id="25_jiu1a"]
[ext_resource type="AudioStream" uid="uid://bb4003jh0j7lg" path="res://recursos/audio/efecto/ataque/mSlimeAttackB.ogg" id="26_s18e0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dqtff"]
atlas = ExtResource("2_n8mn6")
region = Rect2(0, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_wirsj"]
atlas = ExtResource("2_fqlmh")
region = Rect2(0, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_rw1cp"]
atlas = ExtResource("2_fqlmh")
region = Rect2(177, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqidy"]
atlas = ExtResource("2_fqlmh")
region = Rect2(354, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3bgg"]
atlas = ExtResource("2_fqlmh")
region = Rect2(531, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3572"]
atlas = ExtResource("2_fqlmh")
region = Rect2(708, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkdpg"]
atlas = ExtResource("2_fqlmh")
region = Rect2(885, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnfwq"]
atlas = ExtResource("2_fqlmh")
region = Rect2(1062, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_uepcs"]
atlas = ExtResource("2_fqlmh")
region = Rect2(1239, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5vg1"]
atlas = ExtResource("2_fqlmh")
region = Rect2(1416, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofnbq"]
atlas = ExtResource("2_fqlmh")
region = Rect2(1593, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_recaa"]
atlas = ExtResource("2_fqlmh")
region = Rect2(1770, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdelx"]
atlas = ExtResource("2_fqlmh")
region = Rect2(1947, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrp31"]
atlas = ExtResource("2_fqlmh")
region = Rect2(2124, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyoee"]
atlas = ExtResource("2_fqlmh")
region = Rect2(2301, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_0725h"]
atlas = ExtResource("2_fqlmh")
region = Rect2(2478, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5k6e"]
atlas = ExtResource("2_fqlmh")
region = Rect2(2655, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwko0"]
atlas = ExtResource("3_pupxb")
region = Rect2(0, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bw1j"]
atlas = ExtResource("3_pupxb")
region = Rect2(177, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvxl5"]
atlas = ExtResource("3_pupxb")
region = Rect2(354, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_imxj0"]
atlas = ExtResource("3_pupxb")
region = Rect2(531, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ihhu"]
atlas = ExtResource("3_pupxb")
region = Rect2(708, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_ik38y"]
atlas = ExtResource("3_pupxb")
region = Rect2(885, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_ap3qa"]
atlas = ExtResource("3_pupxb")
region = Rect2(1062, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8i45"]
atlas = ExtResource("3_pupxb")
region = Rect2(1239, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4681"]
atlas = ExtResource("3_pupxb")
region = Rect2(1416, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_vp80t"]
atlas = ExtResource("3_pupxb")
region = Rect2(1593, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtf00"]
atlas = ExtResource("3_pupxb")
region = Rect2(1770, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_ube1l"]
atlas = ExtResource("3_pupxb")
region = Rect2(1947, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_115ag"]
atlas = ExtResource("3_pupxb")
region = Rect2(2124, 0, 177, 127)

[sub_resource type="SpriteFrames" id="SpriteFrames_v0jfe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqtff")
}, {
"duration": 1.0,
"texture": ExtResource("3_6y0g8")
}, {
"duration": 1.0,
"texture": ExtResource("4_2qdl5")
}, {
"duration": 1.0,
"texture": ExtResource("5_p2plf")
}, {
"duration": 1.0,
"texture": ExtResource("6_2roui")
}, {
"duration": 1.0,
"texture": ExtResource("7_ommt7")
}, {
"duration": 1.0,
"texture": ExtResource("8_thtka")
}, {
"duration": 1.0,
"texture": ExtResource("9_56tbj")
}, {
"duration": 1.0,
"texture": ExtResource("10_ikwq6")
}, {
"duration": 1.0,
"texture": ExtResource("11_edis6")
}, {
"duration": 1.0,
"texture": ExtResource("12_mv5xx")
}, {
"duration": 1.0,
"texture": ExtResource("13_mrf0y")
}, {
"duration": 1.0,
"texture": ExtResource("14_ownrv")
}, {
"duration": 1.0,
"texture": ExtResource("15_jr0rh")
}, {
"duration": 1.0,
"texture": ExtResource("16_imipm")
}, {
"duration": 1.0,
"texture": ExtResource("17_bc784")
}],
"loop": true,
"name": &"dead",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wirsj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rw1cp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqidy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3bgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3572")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkdpg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnfwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uepcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5vg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofnbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_recaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdelx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrp31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyoee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0725h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5k6e")
}],
"loop": true,
"name": &"idel",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwko0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bw1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvxl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imxj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ihhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ik38y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ap3qa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8i45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4681")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vp80t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtf00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ube1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_115ag")
}],
"loop": true,
"name": &"move",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_kxr87"]
atlas = ExtResource("1_s226o")
region = Rect2(0, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_2weae"]
atlas = ExtResource("1_s226o")
region = Rect2(343, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfmib"]
atlas = ExtResource("1_s226o")
region = Rect2(686, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_37ywv"]
atlas = ExtResource("1_s226o")
region = Rect2(1029, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ew25"]
atlas = ExtResource("1_s226o")
region = Rect2(1372, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvrfu"]
atlas = ExtResource("1_s226o")
region = Rect2(1715, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofr2x"]
atlas = ExtResource("1_s226o")
region = Rect2(2058, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcxdu"]
atlas = ExtResource("1_s226o")
region = Rect2(2401, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2125"]
atlas = ExtResource("1_s226o")
region = Rect2(2744, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2vhf"]
atlas = ExtResource("1_s226o")
region = Rect2(3087, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1p8u"]
atlas = ExtResource("1_s226o")
region = Rect2(3430, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j76j"]
atlas = ExtResource("1_s226o")
region = Rect2(3773, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ue8i"]
atlas = ExtResource("1_s226o")
region = Rect2(4116, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_bw5se"]
atlas = ExtResource("1_s226o")
region = Rect2(4459, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_oq25y"]
atlas = ExtResource("1_s226o")
region = Rect2(4802, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbojk"]
atlas = ExtResource("1_s226o")
region = Rect2(5145, 0, 343, 127)

[sub_resource type="SpriteFrames" id="SpriteFrames_3socb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxr87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2weae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfmib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37ywv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ew25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvrfu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofr2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcxdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2125")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2vhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1p8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j76j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ue8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bw5se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oq25y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbojk")
}],
"loop": true,
"name": &"attack",
"speed": 9.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_04p0b"]
size = Vector2(113, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3t60o"]
size = Vector2(49, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wn32k"]
size = Vector2(113, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gufbs"]
size = Vector2(113, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l52tu"]
size = Vector2(50, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iybss"]
size = Vector2(114, 51)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qffh1"]
size = Vector2(115, 13)

[sub_resource type="Animation" id="Animation_nsrf7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_7bsuh"]
resource_name = "fin"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j4f52"]
_data = {
&"RESET": SubResource("Animation_nsrf7"),
&"fin": SubResource("Animation_7bsuh")
}

[node name="BossSlime" type="CharacterBody2D"]
script = ExtResource("1_5tkg7")

[node name="Muerte" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_upjr0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -39)
sprite_frames = SubResource("SpriteFrames_v0jfe")
animation = &"idel"
autoplay = "idel"
frame_progress = 0.829359

[node name="AnimatedSpriteAtqueD2" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(68, -46)
sprite_frames = SubResource("SpriteFrames_3socb")
animation = &"attack"
frame_progress = 0.371341

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, -22)
shape = SubResource("RectangleShape2D_04p0b")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(15.5, -59)
shape = SubResource("RectangleShape2D_3t60o")
debug_color = Color(0.972136, 0.167705, 3.85046e-07, 0.42)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-2.5, -22)
shape = SubResource("RectangleShape2D_wn32k")
debug_color = Color(1, 0, 0, 0.341176)

[node name="hurtbox" type="Area2D" parent="."]
position = Vector2(1, -35)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(-3.5, 13)
shape = SubResource("RectangleShape2D_gufbs")
debug_color = Color(0.242678, 0.636368, 0, 0.42)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(15, -24.5)
shape = SubResource("RectangleShape2D_l52tu")
debug_color = Color(4.50023e-06, 0.647847, 0.199274, 0.42)

[node name="Derecha" type="RayCast2D" parent="."]
position = Vector2(59, -31)
rotation = -1.59092
target_position = Vector2(-0.321926, 15.9967)

[node name="Izquierda" type="RayCast2D" parent="."]
position = Vector2(-62, -33)
rotation = 1.56731
target_position = Vector2(-0.0663261, 18.9999)

[node name="hitbox2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox2"]
position = Vector2(-3, -23)
shape = SubResource("RectangleShape2D_iybss")
debug_color = Color(1, 0, 0, 0.419608)

[node name="coso" type="Timer" parent="."]

[node name="fondoVida" type="Sprite2D" parent="."]
position = Vector2(0, -90)
texture = ExtResource("5_rebo3")

[node name="Barravida" type="TextureProgressBar" parent="fondoVida"]
offset_left = -50.0
offset_top = -3.0
offset_right = 50.0
offset_bottom = 37.0
max_value = 500.0
texture_over = ExtResource("6_7k0ea")

[node name="Sprite2D" type="Sprite2D" parent="fondoVida"]
texture = ExtResource("7_iy1fy")

[node name="detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
position = Vector2(0.5, -20.5)
shape = SubResource("RectangleShape2D_qffh1")

[node name="muerteEstatico" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -39)
texture = ExtResource("17_bc784")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 939.0
offset_top = -761.0
offset_right = 979.0
offset_bottom = -721.0
scale = Vector2(-47.8905, 40.6661)
color = Color(1, 1, 1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
libraries = {
&"": SubResource("AnimationLibrary_j4f52")
}

[node name="Daño" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("25_jiu1a")

[node name="Ataque" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("26_s18e0")

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="coso" to="." method="_on_coso_timeout"]
[connection signal="area_entered" from="detection" to="." method="_on_detection_area_entered"]
